# sample_db

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  build.bat  build.py  build.sh  build.spec  config.py  models.py  package.json  requirements.txt  spec.md  ui.py
sample_db/: app.py  config.py  file_manager.py  models.py  ui.py
src/electron/: main.js  package.json
src/sample-db-app/: .angular-cli.json  .gitignore  README.md  build.bat  build.sh  package-lock.json  package.json  webpack.config.js
src/sample-db-app/e2e/: app.e2e-spec.ts  app.po.ts
src/sample-db-app/src/: index.html  styles.css
src/sample-db-app/src/app/: app.module.ts  routes.ts
src/sample-db-app/src/app/actions/: bulk.ts  layout.ts  location.ts  plate.ts  search.ts  specimen-type.ts  study.ts
src/sample-db-app/src/app/components/: index.ts  (+5 more)
src/sample-db-py/: .gitignore  build.bat  build.sh  environment.yml  pyproject.toml  requirements.txt  run.py
src/sample-db-py/docs/: requirements.txt
src/sample-db-py/sample_db/: __init__.py  app.py  config.py  file_manager.py  models.py  schemas.py  utils.py  views.py
src/sample-db-py/sample_db/db_impl/: app.py  models.py
src/sample-db-py/sample_db/db_impl/tests/: test_sampleDB.py
src/sample-db-py/sample_db/flask_impl/: __init__.py  config.py  file_manager.py  schemas.py  utils.py  views.py
src/sample-db-py/tests/: test_sampleDB.py
templates/: delete_specimen_template.csv  plate_update_template.csv  plate_upload_template.csv  plate_upload_template_with_date.csv  plate_upload_template_without_date.csv
tests/: test_sampleDB.py
(+74 files in other folders)
