[tool.poetry]
name = "sample-db-py"
version = "1.0.0"
description = "A collection of python tools for managing a barcoded sample database."
authors = ["Maxwell Murphy <murphy2122@berkeley.edu>"]
license = "AGPL"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
sqlalchemy = "^1.3.18"
gevent = "^20.6.2"
marshmallow = "^3.7.1"
marshmallow-sqlalchemy = "^0.23.1"
werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
ipython = "^7.17.0"
pylint = "^2.5.3"
black = "^19.10b0"
pyinstaller = "^4.0"
pre-commit = "^2.7.1"
flake8 = "^3.8.3"
mypy = "^0.782"
sqlalchemy-stubs = "^0.3"
pyupgrade = "^2.7.2"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
